# sui-move-builder

./: .gitignore  CLI_PIPELINE.md  README.md  eslint.config.js  package-lock.json  package.json  sui-version.json  tsconfig.json  tsup.config.ts
.github/workflows/: deploy.yml
local-bin/: .crates.toml  .crates2.json
scripts/: build-config.json  build-wasm.mjs
scripts/templates/: consensus-types.rs  errno.rs  getrandom.rs  move_unit_test_runner_patch.rs  mysten-metrics.rs
scripts/templates/testnet-v1.63.1/: anemo.rs  blst_lib.rs  consensus-config.rs  fastcrypto-tbls.rs  fastcrypto-vdf.rs  fastcrypto-zkp.rs  mysten-metrics.rs  mysten-network.rs  secp256k1_lib.rs  x509-parser.rs
scripts/templates/v1.63.3/: antithesis-sdk.rs  fastcrypto_secp256r1_mod.rs  fs4.rs  move-package-alt-compilation.rs  move-package-alt.rs  neptune_lib.rs  nitro_attestation.rs  rayon_lib.rs  rustix.rs  secp256k1_lib.rs  stacker.rs  tonic.rs  zstd.rs
src/: compilationDependencies.ts  dependencyGraph.ts  fetcher.ts  index.ts  lockfileGenerator.ts  lockfileMigration.ts  packageFetcher.ts  resolvedGraph.ts  resolver.ts  sui_move_wasm.js.d.ts  tomlParser.ts
sui-move-wasm/: Cargo.toml  build.rs  build.sh
sui-move-wasm/js/: package.json
sui-move-wasm/js/src/: fetcher.js  index.js  resolver.js  toml_parser.js
sui-move-wasm/overrides/move-regex-borrow-graph/: Cargo.toml
sui-move-wasm/overrides/stacker/: Cargo.toml
sui-move-wasm/overrides/stacker/src/: lib.rs
sui-move-wasm/src/: lib.rs  manifest.rs
test/: index.html
test/integration/: fidelity_test.mjs  fidelity_test_lite.mjs  transactionAnalyzer.mjs
test/integration/json/: app.kiosk.json  deepbook.core.json  deeptrade-core.json  deeptrade.core.json  nautilus.enclave.json
