[package]
name = "sui-move-wasm"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"
build = "build.rs"

[features]
default = []
testing = ["dep:move-unit-test", "dep:sui-move-natives", "dep:move-vm-runtime"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace]
resolver = "2"


[workspace.dependencies]
aes-gcm = "0.8.0"
anyhow = "1.0.52"
append-only-vec = "0.1.7"
aquamarine = "0.6.0"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
async-trait = "0.1.42"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bitvec = "0.19.4"
byteorder = "1.4.3"
bytes = "1.0.1"
chrono = "0.4.19"
clap = { version = "4", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
crossterm = "0.25.0"
curve25519-dalek = { version = "0.1.0", package = "curve25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
datatest-stable = "0.1.1"
derive-where = "1.2.7"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dunce = "1.0.2"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "u64_backend"] }
ethnum = "1.0.4"
fail = "0.4.0"
file_diff = "1.0.0"
futures = "0.3.12"
getrandom = "0.2.9"
heck = "0.3.2"
hex = "0.4.3"
hex-literal = "0.3.4"
hkdf = "0.10.0"
im = "15.1.0"
indexmap = "2.8.0"
indoc = "2.0.6"
internment = { version = "0.5.0", features = ["arc"] }
itertools = "0.10.0"
json_comments = "0.2.2"
leb128 = "0.2.5"
libfuzzer-sys = "0.4"
log = { version = "0.4.14", features = ["serde"] }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
memory-stats = "1.0.0"
mirai-annotations = "1.10.1"
named-lock = "0.2.0"
num = "0.4.0"
num_cpus = "1.13.0"
once_cell = "1.7.2"
ouroboros = "0.17.2"
packed_struct = "0.10.1"
parking_lot = "0.11.1"
paste = "1.0.5"
path-clean = "1.0.1"
petgraph = "0.8.1"
phf = { version = "0.11", features = ["macros"] }
plotters = { version = "0.3.0", default-features = false, features = ["evcxr", "line_series", "histogram"] }
pretty = "0.10.0"
pretty_simple = "0.1.1"
pretty_assertions = "1.4.1"
prettydiff = "0.4.0"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
proc-macro2 = "1.0.24"
proptest = "1.6.0"
proptest-derive = "0.5"
quote = "1.0.9"
rand = "0.8.0"
ratatui = "0.29.0"
rayon = "1.10.0"
ref-cast = "1.0.6"
regex = "1.5.5"
ripemd160 = "0.9.1"
serde = { version = "1.0.124", features = ["derive"] }
serde-name = "0.1.1"
serde-reflection = "0.5"
serde_bytes = "0.11.5"
serde_json = "1.0.64"
serde_spanned = { version = "0.6.8", features = ["serde"] }
serde_yaml = "0.8.26"
serde_with = "3.9.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
shell-words = "1.0.0"
simplelog = "0.9.0"
similar = "2.4.0"
smallvec = "1.6.1"
stacker = "0.1.15"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
syn = { version = "1.0.64", features = ["derive"] }
sysinfo = "0.35.2"
tempfile = "3.2.0"
tera = "1.16.0"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "1.0.24"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.5.8"
toml_edit = { version = "0.22.24", features = ["serde", "default"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
treeline = "0.1.0"
uint = "0.9.4"
url = "2.2.2"
variant_count = "1.1.0"
vfs = "0.10.0"
walkdir = "2.3.1"
whoami = { version = "1.2.1" }
x25519-dalek = { version = "0.1.0", package = "x25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
z3tracer = "0.8.0"
inline_colorization = "0.1.6"
insta = "1.42.0"
zstd = "0.13.2"
lcov = "0.8.1"
fs4 = { version = "0.13.1" }

bytecode-interpreter-crypto = { path = "vendor/move/crates/bytecode-interpreter-crypto" }
enum-compat-util = { path = "vendor/move/crates/enum-compat-util" }
invalid-mutations = { path = "vendor/move/crates/invalid-mutations" }
jsonrpc = { path = "vendor/move/crates/jsonrpc" }
module-generation = { path = "vendor/move/crates/module-generation" }
move-abstract-interpreter = { path = "vendor/move/crates/move-abstract-interpreter" }
move-abstract-stack = { path = "vendor/move/crates/move-abstract-stack" }
move-binary-format = { path = "vendor/move/crates/move-binary-format" }
move-trace-format = { path = "vendor/move/crates/move-trace-format" }
move-borrow-graph = { path = "vendor/move/crates/move-borrow-graph" }
move-bytecode-source-map = { path = "vendor/move/crates/move-bytecode-source-map" }
move-bytecode-verifier = { path = "vendor/move/crates/move-bytecode-verifier" }
move-bytecode-verifier-analyzer = { path = "vendor/move/crates/move-bytecode-verifier-analyzer" }
move-bytecode-verifier-meter = { path = "vendor/move/crates/move-bytecode-verifier-meter" }
move-bytecode-viewer = { path = "vendor/move/crates/move-bytecode-viewer" }
move-cli = { path = "vendor/move/crates/move-cli" }
move-command-line-common = { path = "vendor/move/crates/move-command-line-common" }
move-compiler = { path = "vendor/move/crates/move-compiler" }
move-core-types = { path = "vendor/move/crates/move-core-types" }
move-bytecode-utils = { path = "vendor/move/crates/move-bytecode-utils" }
move-coverage = { path = "vendor/move/crates/move-coverage" }
move-decompiler = { path = "vendor/move/crates/move-decompiler" }
move-disassembler = { path = "vendor/move/crates/move-disassembler" }
move-docgen = { path = "vendor/move/crates/move-docgen" }
move-docgen-tests = { path = "vendor/move/crates/move-docgen-tests" }
move-ir-compiler = { path = "vendor/move/crates/move-ir-compiler" }
move-ir-to-bytecode = { path = "vendor/move/crates/move-ir-to-bytecode" }
move-ir-to-bytecode-syntax = { path = "vendor/move/crates/move-ir-to-bytecode-syntax" }
move-ir-types = { path = "vendor/move/crates/move-ir-types" }
move-model = { path = "vendor/move/crates/move-model" }
move-model-2 = { path = "vendor/move/crates/move-model-2" }
move-package = { path = "vendor/move/crates/move-package" }
move-package-alt = { path = "vendor/move/crates/move-package-alt" }
move-package-alt-compilation = { path = "vendor/move/crates/move-package-alt-compilation" }
move-proc-macros = { path = "vendor/move/crates/move-proc-macros"}
move-regex-borrow-graph = { path = "vendor/move/crates/move-regex-borrow-graph" }
move-stackless-bytecode = { path = "vendor/move/crates/move-stackless-bytecode" }
move-stackless-bytecode-2 = { path = "vendor/move/crates/move-stackless-bytecode-2" }
move-stdlib = { path = "vendor/move/crates/move-stdlib" }
move-stdlib-natives = { path = "vendor/move/crates/move-stdlib-natives" }
move-symbol-pool = { path = "vendor/move/crates/move-symbol-pool" }
move-transactional-test-runner = { path = "vendor/move/crates/move-transactional-test-runner" }
move-unit-test = { path = "vendor/move/crates/move-unit-test" }
move-vm-config = { path = "vendor/move/crates/move-vm-config" }
move-vm-profiler = { path = "vendor/move/crates/move-vm-profiler" }
move-vm-runtime = { path = "vendor/move/crates/move-vm-runtime" }
move-vm-test-utils = { path = "vendor/move/crates/move-vm-test-utils" }
move-vm-types = { path = "vendor/move/crates/move-vm-types" }
prover_bytecode = { path = "vendor/move/crates/move-stackless-bytecode", package = "move-stackless-bytecode" }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.52"
move-compiler = { path = "vendor/move/crates/move-compiler" }
move-core-types = { path = "vendor/move/crates/move-core-types" }
move-symbol-pool = { path = "vendor/move/crates/move-symbol-pool" }
move-bytecode-utils = { path = "vendor/move/crates/move-bytecode-utils" }
move-bytecode-verifier = { path = "vendor/move/crates/move-bytecode-verifier" }
move-unit-test = { path = "vendor/move/crates/move-unit-test", optional = true }
move-vm-runtime = { path = "vendor/move/crates/move-vm-runtime", optional = true }
move-package-alt-compilation = { path = "vendor/move/crates/move-package-alt-compilation" }
sui-move-natives = { path = "sui-execution/latest/sui-move-natives", package = "sui-move-natives-latest", optional = true }
sui-protocol-config = { path = "crates/sui-protocol-config" }
sui-types = { path = "crates/sui-types" }
sui-verifier = { path = "sui-execution/latest/sui-verifier", package = "sui-verifier-latest" }
vfs = "0.10.0"
hex = "0.4.3"
# getrandom replaced by renamed versions below
console_error_panic_hook = "0.1.7"
base64 = "0.21"
toml = "0.7"
toml_edit = { version = "0.22.24", features = ["serde"] }
blake2 = "0.10"
sha2 = "0.9.3"
once_cell = "1.18.0"
prometheus = { workspace = true }
errno = "=0.3.99"
getrandom_02 = { package = "getrandom", version = "0.2.15", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
colored = "2.0.0"
# We need to ensure we don't pull in things that break WASM
# For now, we rely on workspace dependencies but might need to pin specific WASM-compatible versions if issues arise.


[dev-dependencies]
wasm-bindgen-test = "0.3"
